# mpl2tex

./: .gitignore  README.MD  example.py  pyproject.toml
doc/: template.tex
src/mpl2tex/: figtotex.py  texfig.py
src/pytotex/: figtotex.py  texfig.py
